Replaced round result with instruction

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body id="container">
         <div id="header">
             <h1 id="main-heading">
-                Rock, Paper, Scissors
+                Rock, Paper, Scissors!
             </h1>
         </div>
         <div id="scoreboard">
@@ -38,14 +38,14 @@
                 <div id="round-number">
                     Round #1
                 </div>
-                <div id="result">
+                <div id="instruction">
                     First to 5 wins!
                 </div>
             </div>
             <div id="buttons">
-                <button class="game-buttons" id="rock">ROCK</button>
-                <button class="game-buttons" id="paper">PAPER</button>
-                <button class="game-buttons" id="scissors">SCISSORS</button>
+                <button class="game-buttons hover-effect" id="rock">ROCK</button>
+                <button class="game-buttons hover-effect" id="paper">PAPER</button>
+                <button class="game-buttons hover-effect" id="scissors">SCISSORS</button>
             </div>
         </div>
         <div id="console-container">
